# crypto-analysis

./: .gitignore  pyproject.toml
crypto_analysis/: main.py
crypto_analysis/data/: data_extractor.py
