[tool.poetry]
name = "crypto-analysis"
version = "0.1.0"
description = ""
authors = ["Ricardo Sans <ricardosans98@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
