[tool.poetry]
name = "crypto-analysis"
version = "0.1.0"
description = ""
authors = ["Ricardo Sans <ricardosans98@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.37"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
